--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -308,7 +308,7 @@ Figure \ref{fig:antipoverty_tax_7} presents the (additional) tax rate above \$6.
   {../figures/antipoverty_2_tax_7_average.pdf}}
 \end{figure}
 
-Consistently with the previous findings, taxing income at a 100\% rate above \$6.85/day would not generate enough revenues to eliminate extreme poverty in the five poorest countries. In Nigeria, closing the extreme poverty rate would require taxing the ``non-needy'' at a marginal rate of 20\%. On average over Sub-Saharan Africa, the anti-extreme-poverty tax would be 49\%, and 64\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
+Consistently with the previous findings, taxing income at a 100\% rate above \$6.85/day would not generate enough revenues to eliminate extreme poverty in the five poorest countries. In Nigeria, closing the extreme poverty rate would require taxing the ``non-needy'' at a marginal rate of 20\%. On average over Sub-Saharan Africa, the anti-extreme-poverty tax would be 49\%, and 70\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
 
 Figure \ref{fig:antipoverty_tax_18} presents the anti-extreme-poverty tax on incomes above \$18.15/day, in a very optimistic scenario of 7\% growth. The threshold of \$18.15/day per person corresponds to the U.S. federal poverty line for a family of four and represents a more realistic threshold above which taxes could be increased in the Global South. The anti-extreme-poverty tax rates on the ``non-poor'' in this 7\% growth scenario are comparable to the rates on the non-needy in the baseline scenario. In India, the required tax rate would be \% in the scenario of 7\% growth, and \% if growth until 2030 replicates the 2014--2019 trend. % TODO
 The contribution required of the Indian non-poor seems significant but not unreasonable. Therefore, India seems able to eliminate extreme poverty by 2030 with its domestic resources. The same thing cannot be said of Sub-Saharan Africa. %Therefore, lower-middle income countries like India seem able to eliminate extreme poverty by 2030 with its domestic resources. The same thing cannot be said of low-income countries, most of them in Sub-Saharan Africa. %
@@ -323,21 +323,39 @@ The contribution required of the Indian non-poor seems significant but not unrea
   {../figures/antipoverty_2_tax_18_very_optimistic.pdf}}
 \end{figure}
 
+
 \subsection{The credible potential of domestic redistribution}
-% - Demogrant that can be funded with a given national tax: 5% above 7$  Figure 3
+
+A final way of approaching the issue is to set a tax schedule, compute how much revenues it would generate in each country, and estimate the income floor that these revenues could finance, by topping up the incomes of the poorest to the income floor. As I have already explored extreme redistributive policies, I analyse here a more reasonable tax schedule. Namely, I consider a 10\% marginal tax rate on income above \$6.85/day. Although the taxation threshold may be low and the tax rate low for top incomes, this simple tax schedule seem to correctly reflect the fiscal capacity of governments. The value of the income floor depends on the whole income distribution: the top of the distribution determines the revenues that can be generated; and the bottom dictates the cost of raising low incomes up to a given floor. 
+
+Figure \ref{fig:demogrant_7__10} presents the income floor that can funded in 2030 with our simple tax in a 3\% growth scenario. Although there is about as many countries that cannot close the extreme poverty gap with this tax (23) as low-income countries (27), only 13 countries fall into both of these groups. For example, while Ethiopia (a low-income country) can finance an income floor of \$3.08/day, Nigeria (classified as a lower-middle-income country) can only finance \$1.83/day. Even in a scenario with 7\% growth from 2023 onwards, 10 countries have an income floor below \$2.15 in 2030. Note that the picture does not significantly change when adjusting top incomes so that aggregate consumption matches national accounts: 8 countries are still unable to close the extreme poverty gap despite very optimistic growth in this robustness check. In contrast, if the 7\% growth had started in 2016 (as the SDGs were set up), the 10\% tax would have been sufficient to eliminate extreme poverty in all countries except in Madagascar, where a tax of 23\% would have been required.
+
 % - would have worked well if it had been 7\% since 2016
+\begin{figure}[h]
+  \caption{Income floor that can be funded with a 10\% marginal tax on income above \$6.85/day (in 2017 PPP \$/day). In this idealized policy, all tax revenue is transferred to the poorest and lift them at the income floor, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:demogrant_7__10}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/demogrant_7__10.pdf}}
+\end{figure}
 
 At least two of the SDGs spell out how the elimination of extreme poverty could be funded. % https://sdgs.un.org/2030agenda
-First, the target 8.1 aims for ``at least 7 per cent gross domestic product growth per annum in the least developed countries''. % TODO: the previous tax would have been sufficient in the sdg8 scenario except in Madagascar, where a tax of 23% would have been required. In other words, a sustained high growth would have permitted the least developed countries to eliminate extreme poverty through the mobilization of their domestic resources. However, high growth has never materialized in these countries. 
+First, the target 8.1 aims for ``at least 7 per cent gross domestic product growth per annum in the least developed countries''. As we have seen, a sustained high growth would have permitted the least developed countries to eliminate extreme poverty through the mobilization of their domestic resources. However, high growth has never materialized in these countries. 
 Second, the target 17.2 calls for ``Developed countries to implement fully their official development assistance commitments, including the commitment by many developed countries to achieve the target of 0.7 per cent of ODA/GNI to developing countries and 0.15 to 0.20 per cent of ODA/GNI to least developed countries'' (LDCs). Foreign aid falls short of both the overall target (at 0.36\% of developed countries' GNI) and the LDCs' target (at 0.06\%). Although European countries taken together respect their commitment, the other do not. In particular, the U.S. only allocates 0.22\% of its GNI to foreign aid.\cite{oecd_oda_2023} The global extreme poverty gap (0.17\% of global real GDP) is a bit lower than the shortfall of foreign aid relative to the target (0.2\% of global nominal GDP), suggesting that extreme poverty could be eradicated if developed countries respected their commitment. % OECD (high-income) countries represent 59% (61%) of the world nominal GDP, so shortfall of aid is 0.34*0.59=0.2% of global GDP in nominal. https://data.worldbank.org/indicator/NY.GDP.MKTP.CD
-% TODO? To meet the broader SDGs and ``end poverty in all its forms'', the 0.7\% target would not suffice and global redistribution would need to be significantly increased. 
+To meet the broader SDGs and ``end poverty in all its forms'', the 0.7\% target would not suffice and global redistribution would need to be significantly increased. 
 
 \subsection{The potential of global redistribution}
+
+In this section, we explore the potential of global redistributive policies to close the global poverty gap. 
 % - One example of global redistribution (incl. largest recipients/contributors)
-% - Inequality indicators BAU / national / global redistr: Table 2
+% x Inequality indicators BAU / national / global redistr: Table 2
 
 
 \section{Discussion} 
+
+% Paper shows that extreme poverty will not be eradicated in 2030 unless international transfers. 
+% Even in the longer term, only strong growth + strong internal redistribution + time can allow countries to eliminate extreme poverty on their own (cite the time that China took). 
+% In contrast, international transfers might solve the issue more quickly and at a much lower welfare cost. 
+% However, this paper only arithmetics, poverty is multidimensional and sustained structural factors (wars, corruption, deficient administrative capacity). These factors can hamper the effectiveness of international transfers. More research needed to study concrete policies on how to distribute resources to the poorest.
 
 % \begin{methods}  % WPcomment
   \begin{small} % NCCcomment
