fix pg, ap_gap and ap_tax, account for pop_share everywhere

--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -88,6 +88,20 @@
   url = {https://dx.doi.org/10.5325/jafrideve.19.2.0093}
 }
 
+@misc{blanchet_uncovering_2022,
+  title = {Uncovering the {{Dynamics}} of the {{Wealth Distribution}}},
+  author = {Blanchet, Thomas},
+  year = {2022},
+  month = nov,
+  number = {arXiv:2211.15509},
+  eprint = {2211.15509},
+  primaryclass = {econ, q-fin},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2211.15509},
+  url = {http://arxiv.org/abs/2211.15509},
+  archiveprefix = {arxiv}
+}
+
 @article{bolch_arithmetics_2022,
   title = {The Arithmetics and Politics of Domestic Resource Mobilization for Poverty Eradication},
   author = {Bolch, Kimberly B. and Ceriani, Lidia and {L{\'o}pez-Calva}, Luis F.},
@@ -403,7 +417,7 @@
   issn = {2040-0209},
   doi = {10.1111/j.2040-0209.2012.00398.x},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.2040-0209.2012.00398.x},
-  copyright = {{\textcopyright} 2012 Institute of Development Studies}
+  copyright = {{\copyright} 2012 Institute of Development Studies}
 }
 
 @article{kerner_does_2017,
@@ -629,7 +643,7 @@
   issn = {1475-4991},
   doi = {10.1111/roiw.12362},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12362},
-  copyright = {{\textcopyright} 2018 International Association for Research in Income and Wealth}
+  copyright = {{\copyright} 2018 International Association for Research in Income and Wealth}
 }
 
 @techreport{oecd_oda_2023,
@@ -692,7 +706,7 @@
   issn = {1475-4991},
   doi = {10.1111/roiw.12577},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12577},
-  copyright = {{\textcopyright} 2022 International Association for Research in Income and Wealth}
+  copyright = {{\copyright} 2022 International Association for Research in Income and Wealth}
 }
 
 @article{ravallion_poorer_2010,
@@ -734,11 +748,32 @@
   url = {https://papers.ssrn.com/abstract=3537705}
 }
 
+@article{saez_progressive_2019,
+  title = {Progressive {{Wealth Taxation}}},
+  author = {Saez, Emmanuel and Zucman, Gabriel},
+  year = {2019},
+  journal = {Brookings Papers on Economic Activity},
+  volume = {2019},
+  number = {2},
+  pages = {437--533},
+  publisher = {{Johns Hopkins University Press}},
+  issn = {1533-4465},
+  doi = {10.1353/eca.2019.0017},
+  url = {https://muse.jhu.edu/pub/11/article/764710}
+}
+
 @article{sdsn_sdg_2019,
   title = {{{SDG Costing}} \& {{Financing}} for Low-Income Developing Countries},
   author = {SDSN, Sustainable Development Solutions Network},
   year = {2019},
   url = {https://resources.unsdsn.org/sdg-costing-financing-for-low-income-developing-countries}
+}
+
+@techreport{songwe_climate_2023,
+  title = {A Climate Finance Framework},
+  author = {Songwe, Vera and Stern, Nick and Bhattacharya, Amar},
+  year = {2023},
+  url = {https://www.globalinfrafacility.org/sites/gif/files/2023-12/A-Climate-Finance-Framework\_IHLEG-Report-2-SUMMARY\_0.pdf}
 }
 
 @article{sullivan_capitalist_2023,
@@ -757,6 +792,13 @@
   url = {https://doi.org/10.1080/13563467.2023.2217087}
 }
 
+@techreport{un_sustainable_2022,
+  title = {The {{Sustainable Development Goals Report}}},
+  author = {UN},
+  year = {2022},
+  url = {https://unstats.un.org/sdgs/report/2022/The-Sustainable-Development-Goals-Report-2022.pdf}
+}
+
 @inbook{unctad_estimating_2021,
   title = {Estimating the Cost of Achieving {{Sustainable Development Goals}} in the {{LDCs}} during the Post-Pandemic Decade},
   booktitle = {The {{Least Developed Countries Report}} 2021},
@@ -769,6 +811,12 @@
   url = {https://www.un-ilibrary.org/content/books/9789210056052c011},
   collaborator = {{UNCTAD}},
   isbn = {978-92-1-005605-2}
+}
+
+@article{unctad_world_2023,
+  title = {World {{Investment Report}} 2023},
+  author = {UNCTAD, .},
+  year = {2023}
 }
 
 @book{vorisek_understanding_2020,
